Link the js file

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <button id="view-score-btn" class="start-btn btn hide">View Score</button> <!-- Button to view score, hidden initially -->
   </div>
 </div>
+<script src="index.js"></script>
 </body>
 </html>
